@startuml
skinparam linetype ortho
class User{
    id: varchar(36) (uuid4), primarykey
    name: varchar(255), notnull
    role_id: varchar(36), notnull, foreign key 
    email: varchar(255), unique
}
User ||--|| Role
class CustomerData {
    id: varchar(36), primarykey
    user_id: varchar(36), unique, notnull, foreign key
    customer_number, varchar(255), notnull
    country_id: varchar(36), notnull, foreign key
}
CustomerData ||--|| User
CustomerData ||--|| Country
class UserDeviceGroupRelation {
    id: varchar(36), primarykey
    user_id: varchar(36), notnull, foreign key
    device_group_id: varchar(36), notnull, foreign key
}
UserDeviceGroupRelation }o--|| User
UserDeviceGroupRelation }o--|| DeviceGroup
class Country{
    id: varchar(36), primarykey
    name: varchar(255), notnull
    code_2: varchar(2), notnull
    code_3: varchar(3), notnull
}
class Role {
    id: varchar(36), primarykey
    name: varchar(255), notnull
}
class Log {
    id: varchar(36), primarykey
    user_id: varchar(36), notnull, foreign key
    data: text, notnull
    timestamp: datetime, notnull
}
Log }o--|| User
class DeviceType {
    id: varchar(36), primarykey
    name: varchar(255), notnull, unique
}
class DeviceModel {
    id: varchar(36), primarykey
    device_type_id: varchar(36), notnull, foreign key
    name: varchar(255) notnull
}
DeviceModel ||--|| DeviceType
class Device {
    id: varchar(36), primarykey
    device_model_id: varchar(36), notnull, foreign key
    serial_number: varchar(50), notnull, unique
    equimpent_number: varchar(50), notnull
    suffix: varchar(50), notnull
    customer_id: varchar(36), notnull, foreign key
    enabled: bool, notnull
}
Device ||--|| DeviceModel
Device }o--|| CustomerData
class DeviceDeviceGroupRelation {
    id: varchar(36), primarykey
    device_id: varchar(36), notnull, foreign key
    device_group_id: varchar(36), notnull, foreign key
}
DeviceDeviceGroupRelation }o--|| Device
DeviceDeviceGroupRelation }o--|| DeviceGroup
class DeviceGroup {
    id: varchar(36), primarykey
    name: varchar(255), notnull
}
class Document{
    id: varchar(36), primarykey
    device_id: varchar(36), notnull, foreign key
    upload_date: datetime, notnull
    file_name: varchar(255), notnull
    file_content: longblob, notnull
    file_size: int, notnull
    event_code: varchar(16)
    event_message: varchar(255)
}
Document }o--|| Device
class Notification {
    id: varchar(36), primarykey
    user_id: varchar(36)
    device_id: varchar(36)
    timestamp: datetime, notnull
    is_sent: bool, notnull
    content: text, notnull
}
Notification }o--|| User
Notification }o--|| Device
class DeviceStat {
    id: varchar(36), primarykey
    device_id: varchar(36), notnull, unique
    active_since: timestamp
    last_upload_timestamp: timestamp
    total_file_count: int
    total_sent_bytes: bigint
    max_file_size: int
    firmware_version: varchar(32)
    windows_version: varchar(64)
    app_version: varchar(32)
}
DeviceStat ||--|| Device
>>>>>>> ed223221a99cd6de7005bdbd51c7f6a08189818c
@enduml
